--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
- <!DOCTYPE html>
- <html lang="ja">
- <head>
- 	<meta charset="UTF-8">
- 	<title>World Object展</title>
- </head>
- <body>
- 	<h1>World Object展</h1>
- </body>
- </html>
+<!DOCTYPE html>
+<html lang="ja">
+
+<head>
+	<meta charset="UTF-8">
+	<title>World Object展</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="Description" content="VRChatのワールドに設置する小物、家屋やワールド自体などを展示するイベント">
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+	<link href="./css/main.css" rel="stylesheet" />
+</head>
+
+<body>
+	<header>
+		<div class="header-area-content">
+			<img class="header-logo-img" src="/img/logo.png" alt="logo" />
+		<p>
+			<span class="header-date-label">開催</span>
+			<span class="header-date">2020.11.27</span>
+		</p>
+		<p>
+			<span class="header-date-label">参加締切</span>
+			<span class="header-date">2020.09.28</span>
+		</p>
+	</div>
+	</header>
+
+	<div class="intro">
+		<div class="intro-text">
+			<p>VRChatのワールドに設置する小物、家屋やワールド自体などを展示するイベントです。</p>
+			<p>出展物はそれぞれ専用の各種テーマ（和風、シンプルモダン等）を持った展示用スペースに展示されます。</p>
+			<p>また、ワールド自体を出展することもできます。</p>
+		
+			<a href="#" class="intro-rule" about="_blank" rel="noopener noreferrer">出展規約</a>
+			<a class="intro-button">
+				<span class="intro-button-text">出展参加申込</span>
+			</a>
+		</div>
+	</div>
+</body>
+
+</html>
