add: manifest and og-image

--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
 	<meta charset="UTF-8">
 	<title>World Object展</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="Description" content="VRChatのワールドに設置する小物、家屋やワールド自体などを展示するイベント">
-	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="theme-color" content="#d75e86" />
+	<meta name="description" content="World Object展：VRChatのワールドに設置する小物、家屋やワールド自体などを展示するイベント"/>
+	<meta property="og:url" content="https://worldobjectexhibition.github.io/" />
+	<meta property="og:title" content="World Object展" />
+	<meta property="og:description" content="World Object展：VRChatのワールドに設置する小物、家屋やワールド自体などを展示するイベント" />
+	<meta property="og:image" content="https://worldobjectexhibition.github.io/img/og-image.png" />
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="World Object展" />
+	<meta property="og:locale" content="ja_JP" />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="@kelupu" />
+	<link rel="manifest" href="/manifest.json" />
 	<link href="./css/main.css" rel="stylesheet" />
+	<link rel="icon" href="/img/favicon.ico" />
 </head>
 
 <body>
 	<header>
 		<div class="header-area-content">
-			<img class="header-logo-img" src="/img/logo.png" alt="logo" />
+			<img class="header-logo-img" src="/img/logo.svg" alt="logo" />
 		<p>
 			<span class="header-date-label">開催</span>
 			<span class="header-date">2020.11.27</span>
@@ -31,8 +43,14 @@
 			<p>出展物はそれぞれ専用の各種テーマ（和風、シンプルモダン等）を持った展示用スペースに展示されます。</p>
 			<p>また、ワールド自体を出展することもできます。</p>
 		
-			<a href="#" class="intro-rule" about="_blank" rel="noopener noreferrer">出展規約</a>
-			<a class="intro-button">
+			<a class="intro-rule"
+				href="https://www.google.com/url?q=https://drive.google.com/drive/u/0/folders/1a9d9-K952uqskZU10si5MRD9s3TUUzVf&sa=D&ust=1597405688953000&usg=AFQjCNEJRxc6NJymHSDFO2I-UnjvyGxTpA"
+				target="_blank" rel="noopener noreferrer">
+				出展規約
+			</a>
+			<a
+				class="intro-button"
+				href="https://docs.google.com/forms/d/e/1FAIpQLSfKV-3xKIye4BxpSMzQS9ef59GA1sZ-ZjQ15G1l4If7ROEO4Q/viewform">
 				<span class="intro-button-text">出展参加申込</span>
 			</a>
 		</div>
