add: @media screen

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	<link rel="manifest" href="/manifest.json" />
 	<link href="./css/main.css" rel="stylesheet" />
 	<link rel="icon" href="/img/favicon.ico" />
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175659830-1"></script>
+	<script>const g=()=>{(dataLayer||[]).push(arguments)}; g('js', new Date());	 g('config', 'UA-175659830-1');</script>
 </head>
 
 <body>
@@ -42,11 +44,16 @@
 			<p>VRChatのワールドに設置する小物、家屋やワールド自体などを展示するイベントです。</p>
 			<p>出展物はそれぞれ専用の各種テーマ（和風、シンプルモダン等）を持った展示用スペースに展示されます。</p>
 			<p>また、ワールド自体を出展することもできます。</p>
-		
+
 			<a class="intro-rule"
-				href="https://www.google.com/url?q=https://drive.google.com/drive/u/0/folders/1a9d9-K952uqskZU10si5MRD9s3TUUzVf&sa=D&ust=1597405688953000&usg=AFQjCNEJRxc6NJymHSDFO2I-UnjvyGxTpA"
+				href="https://bit.ly/3aBRPnG"
 				target="_blank" rel="noopener noreferrer">
 				出展規約
+			</a>
+			<a class="intro-rule"
+				href="#"
+				target="_blank" rel="noopener noreferrer">
+				入稿ルール
 			</a>
 			<a
 				class="intro-button"
