--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 	<link href="./css/main.css" rel="stylesheet" />
 	<link rel="icon" href="/img/favicon.ico" />
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175659830-1"></script>
-	<script>const g=()=>{(dataLayer||[]).push(arguments)}; g('js', new Date());	 g('config', 'UA-175659830-1');</script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());gtag('config', 'UA-175659830-1');
+	</script>
 </head>
 
 <body>
