fix: disable link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
 	<header>
 		<div class="header-area-content">
-			<img class="header-logo-img" src="/img/logo.svg" alt="logo" />
+			<h1><img class="header-logo-img" src="/img/logo.svg" alt="World Object展" /></h1>
 		<p>
 			<span class="header-date-label">開催</span>
 			<span class="header-date">2020.11.27</span>
@@ -45,7 +45,7 @@
 
 	<div class="intro">
 		<div class="intro-text">
-			<p>VRChatのワールドに設置する小物、家屋やワールド自体などを展示するイベントです。</p>
+			<p>VRChatのワールドに設置する小物、家屋やワールド自体などを展示するイベント、World Object展を開催します。</p>
 			<p>出展物はそれぞれ専用の各種テーマ（和風、シンプルモダン等）を持った展示用スペースに展示されます。</p>
 			<p>また、ワールド自体を出展することもできます。</p>
 
@@ -54,10 +54,9 @@
 				target="_blank" rel="noopener noreferrer">
 				出展規約
 			</a>
-			<a class="intro-rule"
-				href="#"
+			<a class="intro-rule disabled"
 				target="_blank" rel="noopener noreferrer">
-				入稿ルール
+				入稿ルール（後日公開予定）
 			</a>
 			<a
 				class="intro-button"
