add: regulation url

--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
 				target="_blank" rel="noopener noreferrer">
 				出展規約
 			</a>
-			<a class="intro-rule disabled"
+			<a class="intro-rule"
+				href="https://drive.google.com/file/d/1h3vWoE9jtPhglrjEzX1kLEtPW5KkJu-n/view?usp=sharing"
 				target="_blank" rel="noopener noreferrer">
-				入稿ルール（後日公開予定）
+				入稿ルール
 			</a>
 			<a
 				class="intro-button"
