reset: css cache

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@kelupu" />
 	<link rel="manifest" href="/manifest.json" />
-	<link rel="preload" href="./css/main.css" as="style" />
+	<link rel="preload" href="./css/main_ddefb284.css" as="style" />
 	<link rel="preload" href="./css/staff-icons.css" as="style" />
 	<link rel="preload" href="./css/exhibitor-icons.css" as="style" />
-	<link href="./css/main.css" rel="stylesheet" />
+	<link href="./css/main_ddefb284.css" rel="stylesheet" />
 	<link href="./css/staff-icons.css" rel="stylesheet" />
 	<link href="./css/exhibitor-icons.css" rel="stylesheet" />
 	<link rel="icon" href="/img/favicon.ico" />
