--- a/index.html
+++ b/index.html
@@ -659,6 +659,16 @@
     <a class="exhibitor-shop" href="https://hpoqou.booth.pm/" target="_blank" rel="noopener noreferrer"></a>
   </div>
 
+  <div class="exhibitor">
+    <div class="exhibitor-icon i-kelupu"></div>
+    <a class="exhibitor-name-area" href="https://twitter.com/kelupu" target="_blank" rel="noopener noreferrer">
+      <p class="exhibitor-shop-name">けるぷのもり</p>
+      <p class="exhibitor-name">kelupu</p>
+      <p class="exhibitor-twitter-id">@kelupu</p>
+    </a>
+    <a class="exhibitor-shop" href="https://kelupu.booth.pm/" target="_blank" rel="noopener noreferrer"></a>
+  </div>
+
 
 		</div>
 	</div>
