--- a/index.html
+++ b/index.html
@@ -650,6 +650,16 @@
   </div>
 
   <div class="exhibitor">
+    <div class="exhibitor-icon i-lag_vrchat"></div>
+    <a class="exhibitor-name-area" href="https://twitter.com/lag_vrchat" target="_blank" rel="noopener noreferrer">
+      <p class="exhibitor-shop-name">lag</p>
+      <p class="exhibitor-name">lag</p>
+      <p class="exhibitor-twitter-id">@lag_vrchat</p>
+    </a>
+    <a class="exhibitor-shop" href="https://lag-lag-lag01.booth.pm/" target="_blank" rel="noopener noreferrer"></a>
+  </div>
+
+  <div class="exhibitor">
     <div class="exhibitor-icon i-rotten_apples__"></div>
     <a class="exhibitor-name-area" href="https://twitter.com/rotten_apples__" target="_blank" rel="noopener noreferrer">
       <p class="exhibitor-shop-name">一夏庵</p>
